--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -8,7 +8,7 @@
   background-color: #c86cb4;
   border-radius: 25px;
   background-image: url("https://www.transparenttextures.com/patterns/rocky-wall.png");
-  margin-top: 8em;
+  margin-top: 7em;
 }
 .name-text {
   color: #ffffff;
